class cliente:
    def __init__(edad: int, nombre: str) -> None:


class bibliotecario:
    def __init__(nombre: str, edad: int) -> None:

class libro:
    def __init__(nombre: str) -> None:

class biblioteca:
    def __init__(nombre_libro) -> None:
